--- a/src/components/Burger/Meat.css
+++ b/src/components/Burger/Meat.css
@@ -6,6 +6,12 @@
     text-align: center;
     font-weight: bold;
     font-size: 1.2rem;
+    margin-top: 56px;
+}
+
+::-webkit-scrollbar {
+    width: 0px;  /* remove scrollbar space */
+    background: transparent;  /* optional: just make scrollbar invisible */
 }
 
 @media (min-width: 1000px) and (min-height: 700px) {
